# Wunner

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  wunner_build.sh
docker/: Dockerfile  entrypoint.sh
inc/: autocomplete.hpp  crawler.hpp  crawler_info.hpp  index_builder.hpp  parser.hpp  query.hpp  ranker.hpp  utils.hpp  validator.hpp
lib/Porter Stemmer/: PorterStemmer.cpp
res/: crawl_seed
src/: autocomplete.cpp  crawler.cpp  index_builder.cpp  main.cpp  parser.cpp  query.cpp  validator.cpp
